--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,9 @@ spring.application.name=exercice
 #spring.main.allow-bean-definition-overriding=true
 spring.datasource.url=jdbc:postgresql://localhost:5432/tp_springbatch
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.username=recettebatch
-spring.datasource.password=recettebatch
+spring.datasource.username=user-name
+spring.datasource.password=strong-password
+spring.main.allow-bean-definition-overriding=true
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 # application.properties
 spring.batch.jdbc.initialize-schema=always
